fixed double scrollbar issue

--- a/styles.css
+++ b/styles.css
@@ -35,18 +35,26 @@ nav a:hover {
 main {
   display: block;
   /* height cannot be auto or 100% */
-  height: 1000px;
+  height: 100vh;
   /* overflow-y can also be scroll */
   overflow-y: scroll;
   scroll-behavior: smooth;
+  /* overflow: hidden; */
+  overflow: scroll;
 }
 section {
-  padding: 0 0.5em;
+  padding: 1em 0.5em 0;
+  min-height: 100vh;
+  box-sizing: border-box;
 }
+section:nth-child(even) {
+  background: #eee;
+}
+
 h2 {
   font-size: 2.5em;
-  margin: 0;
-  padding-top: 0.75em;
+  margin-top: 0.25em;
+  /* padding-top: 0.75em; */
 }
 p a:hover {
   text-decoration: underline;
@@ -54,9 +62,9 @@ p a:hover {
 
 @media screen and (min-width: 600px) {
   section {
-    padding: 0 2em;
+    padding: 1em 2em 0;
   }
   h2 {
-    font-size: 4em;
+    font-size: 3em;
   }
 }
